--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r36088)
-# Sat Apr  6 11:53:30 2013
+# Sat Apr  6 19:20:53 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -2691,7 +2691,7 @@ CONFIG_PACKAGE_tcpdump=y
 # CONFIG_PACKAGE_udpcast is not set
 # CONFIG_PACKAGE_udpxy is not set
 CONFIG_PACKAGE_ulogd=y
-# CONFIG_PACKAGE_ulogd-mod-extra is not set
+CONFIG_PACKAGE_ulogd-mod-extra=y
 # CONFIG_PACKAGE_ulogd-mod-mysql is not set
 # CONFIG_PACKAGE_ulogd-mod-pcap is not set
 # CONFIG_PACKAGE_ulogd-mod-pgsql is not set
