--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r36088)
-# Wed Apr 10 00:09:44 2013
+# Wed Apr 17 02:42:03 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -3600,6 +3600,11 @@ CONFIG_PACKAGE_uboot-envtools=y
 # CONFIG_PACKAGE_xsltproc is not set
 # CONFIG_PACKAGE_xxd is not set
 # CONFIG_PACKAGE_zaptel14-util is not set
+
+#
+# Extra packages
+#
+CONFIG_PACKAGE_reghack=y
 
 #
 # Emulators
