--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r36088)
-# Sat Apr 20 15:07:43 2013
+# Sun Apr 21 02:46:45 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -1256,7 +1256,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_TOP_CPU_GLOBAL_PERCENTS=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_TOP_SMP_PROCESS is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_TOPMEM is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_SHOW_THREADS is not set
-# CONFIG_BUSYBOX_CONFIG_WATCH is not set
+CONFIG_BUSYBOX_CONFIG_WATCH=y
 
 #
 # Runit Utilities
@@ -1344,7 +1344,7 @@ CONFIG_PACKAGE_opkg=y
 CONFIG_PACKAGE_swconfig=y
 CONFIG_PACKAGE_uci=y
 # CONFIG_PACKAGE_udev is not set
-# CONFIG_PACKAGE_wireless-tools is not set
+CONFIG_PACKAGE_wireless-tools=y
 
 #
 # IPv6
@@ -2267,6 +2267,7 @@ CONFIG_PACKAGE_olsrd-mod-sgwdynspeed=y
 CONFIG_PACKAGE_olsrd-mod-txtinfo=y
 CONFIG_PACKAGE_olsrd-mod-watchdog=y
 # CONFIG_PACKAGE_olsrd-ninux is not set
+# CONFIG_PACKAGE_olsrd-ninux-all is not set
 # CONFIG_PACKAGE_parprouted is not set
 # CONFIG_PACKAGE_quagga is not set
 # CONFIG_PACKAGE_redir is not set
@@ -2647,6 +2648,7 @@ CONFIG_PACKAGE_ppp-mod-pppoe=y
 # CONFIG_PACKAGE_radsecproxy is not set
 # CONFIG_PACKAGE_rrs is not set
 # CONFIG_PACKAGE_rrs-nossl is not set
+# CONFIG_PACKAGE_rssileds is not set
 # CONFIG_PACKAGE_samba36-client is not set
 # CONFIG_PACKAGE_samba36-server is not set
 # CONFIG_PACKAGE_scdp is not set
@@ -2909,7 +2911,7 @@ CONFIG_PACKAGE_libdaemon=y
 # CONFIG_PACKAGE_libintl is not set
 # CONFIG_PACKAGE_libintl-full is not set
 # CONFIG_PACKAGE_libiw is not set
-# CONFIG_PACKAGE_libiwinfo is not set
+CONFIG_PACKAGE_libiwinfo=y
 # CONFIG_PACKAGE_libjpeg is not set
 # CONFIG_PACKAGE_libjs is not set
 CONFIG_PACKAGE_libjson=y
@@ -3460,7 +3462,7 @@ CONFIG_PACKAGE_vim=y
 # CONFIG_PACKAGE_io is not set
 # CONFIG_PACKAGE_ipmitool is not set
 # CONFIG_PACKAGE_iwcap is not set
-# CONFIG_PACKAGE_iwinfo is not set
+CONFIG_PACKAGE_iwinfo=y
 # CONFIG_PACKAGE_jpeg-tools is not set
 CONFIG_PACKAGE_jshn=y
 # CONFIG_PACKAGE_kexec-tools is not set
