Add softflowd package to .config

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# OpenWrt version: Attitude Adjustment (r36599)
-# Fri May 10 20:23:33 2013
+# OpenWrt version: Attitude Adjustment (r36608)
+# Wed Jun 26 09:46:29 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -1128,7 +1128,7 @@ CONFIG_BUSYBOX_CONFIG_WATCHDOG=y
 # CONFIG_BUSYBOX_CONFIG_NAMEIF is not set
 # CONFIG_BUSYBOX_CONFIG_NBDCLIENT is not set
 CONFIG_BUSYBOX_CONFIG_NC=y
-# CONFIG_BUSYBOX_CONFIG_NC_SERVER is not set
+CONFIG_BUSYBOX_CONFIG_NC_SERVER=y
 # CONFIG_BUSYBOX_CONFIG_NC_EXTRA is not set
 # CONFIG_BUSYBOX_CONFIG_NC_110_COMPAT is not set
 CONFIG_BUSYBOX_CONFIG_PING=y
@@ -1911,6 +1911,19 @@ CONFIG_PACKAGE_uboot-ar71xx-nbg460n_550n_550nh=y
 # CONFIG_PACKAGE_uacctd-sqlite is not set
 
 #
+# eigennet
+#
+# CONFIG_PACKAGE_eigennet-autoconf is not set
+CONFIG_PACKAGE_eigennet-bwtest=y
+CONFIG_PACKAGE_eigennet-bwtest-webui=y
+# CONFIG_PACKAGE_eigennet-firewall is not set
+# CONFIG_PACKAGE_eigennet-gw4server is not set
+# CONFIG_PACKAGE_eigennet-httpinfo is not set
+CONFIG_PACKAGE_eigennet-pointing=y
+CONFIG_PACKAGE_eigennet-pointing-webui=y
+# CONFIG_PACKAGE_eigennet-reghack is not set
+
+#
 # zabbix
 #
 # CONFIG_PACKAGE_zabbix-agent is not set
@@ -2481,8 +2494,11 @@ CONFIG_PACKAGE_tinc=y
 CONFIG_PACKAGE_tinyproxy=y
 # CONFIG_PACKAGE_transocks is not set
 # CONFIG_PACKAGE_tsocks is not set
-# CONFIG_PACKAGE_uhttpd is not set
+CONFIG_PACKAGE_uhttpd=y
 # CONFIG_PACKAGE_uhttpd_debug is not set
+# CONFIG_PACKAGE_uhttpd-mod-lua is not set
+# CONFIG_PACKAGE_uhttpd-mod-tls is not set
+# CONFIG_PACKAGE_uhttpd-mod-ubus is not set
 # CONFIG_PACKAGE_wccpd is not set
 
 #
@@ -2662,7 +2678,7 @@ CONFIG_PACKAGE_snmp-utils=y
 CONFIG_PACKAGE_snmpd=y
 # CONFIG_PACKAGE_snmpd-static is not set
 # CONFIG_PACKAGE_socat is not set
-# CONFIG_PACKAGE_softflowd is not set
+CONFIG_PACKAGE_softflowd=y
 # CONFIG_PACKAGE_soloscli is not set
 # CONFIG_PACKAGE_ss is not set
 # CONFIG_PACKAGE_sscep is not set
@@ -3618,7 +3634,7 @@ CONFIG_PACKAGE_jshn=y
 # CONFIG_PACKAGE_procps is not set
 # CONFIG_PACKAGE_psmisc is not set
 # CONFIG_PACKAGE_psplash is not set
-# CONFIG_PACKAGE_pv is not set
+CONFIG_PACKAGE_pv=y
 # CONFIG_PACKAGE_pwcrypt is not set
 # CONFIG_PACKAGE_pwgen is not set
 # CONFIG_PACKAGE_px5g is not set
