--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# OpenWrt version: Attitude Adjustment (r36608)
-# Wed Jun 26 09:46:29 2013
+# OpenWrt version: Attitude Adjustment (r37378)
+# Thu Jul 25 12:48:01 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -1396,6 +1396,7 @@ CONFIG_PACKAGE_ip6tables=y
 # CONFIG_PACKAGE_wide-dhcpv6-server is not set
 # CONFIG_PACKAGE_6in4 is not set
 # CONFIG_PACKAGE_6rd is not set
+# CONFIG_PACKAGE_6relayd is not set
 # CONFIG_PACKAGE_6scripts is not set
 # CONFIG_PACKAGE_6to4 is not set
 # CONFIG_PACKAGE_6tunnel is not set
@@ -1409,13 +1410,16 @@ CONFIG_PACKAGE_ip6tables=y
 # CONFIG_PACKAGE_dibbler-relay is not set
 # CONFIG_PACKAGE_dibbler-requestor is not set
 # CONFIG_PACKAGE_dibbler-server is not set
+# CONFIG_PACKAGE_ds-lite is not set
 # CONFIG_PACKAGE_gw6c is not set
+# CONFIG_PACKAGE_ipv6-support is not set
 # CONFIG_PACKAGE_ipv6calc is not set
 # CONFIG_PACKAGE_ipv6calc-mini is not set
 # CONFIG_PACKAGE_ipv6log is not set
 # CONFIG_PACKAGE_ipv6log-mini is not set
 # CONFIG_PACKAGE_mrd6 is not set
 # CONFIG_PACKAGE_ndppd is not set
+# CONFIG_PACKAGE_odhcp6c is not set
 # CONFIG_PACKAGE_ptrtd is not set
 CONFIG_PACKAGE_radvd=y
 CONFIG_PACKAGE_radvdump=y
@@ -1872,6 +1876,7 @@ CONFIG_PACKAGE_MAC80211_MESH=y
 # CONFIG_PACKAGE_kmod-rt2800-pci is not set
 # CONFIG_PACKAGE_kmod-rt2800-usb is not set
 # CONFIG_PACKAGE_kmod-rt2x00-lib is not set
+# CONFIG_PACKAGE_kmod-rt2x00-mmio is not set
 # CONFIG_PACKAGE_kmod-rt2x00-pci is not set
 # CONFIG_PACKAGE_kmod-rt2x00-usb is not set
 # CONFIG_PACKAGE_kmod-rt61-pci is not set
@@ -1909,19 +1914,6 @@ CONFIG_PACKAGE_uboot-ar71xx-nbg460n_550n_550nh=y
 # CONFIG_PACKAGE_uacctd-mysql is not set
 # CONFIG_PACKAGE_uacctd-pgsql is not set
 # CONFIG_PACKAGE_uacctd-sqlite is not set
-
-#
-# eigennet
-#
-# CONFIG_PACKAGE_eigennet-autoconf is not set
-CONFIG_PACKAGE_eigennet-bwtest=y
-CONFIG_PACKAGE_eigennet-bwtest-webui=y
-# CONFIG_PACKAGE_eigennet-firewall is not set
-# CONFIG_PACKAGE_eigennet-gw4server is not set
-# CONFIG_PACKAGE_eigennet-httpinfo is not set
-CONFIG_PACKAGE_eigennet-pointing=y
-CONFIG_PACKAGE_eigennet-pointing-webui=y
-# CONFIG_PACKAGE_eigennet-reghack is not set
 
 #
 # zabbix
@@ -2931,6 +2923,7 @@ CONFIG_PACKAGE_libiwinfo=y
 # CONFIG_PACKAGE_libjpeg is not set
 # CONFIG_PACKAGE_libjs is not set
 CONFIG_PACKAGE_libjson=y
+CONFIG_PACKAGE_libjson-c=y
 # CONFIG_PACKAGE_libldns is not set
 # CONFIG_PACKAGE_libleptonica is not set
 # CONFIG_PACKAGE_libltdl is not set
@@ -3594,6 +3587,7 @@ CONFIG_PACKAGE_jshn=y
 # CONFIG_PACKAGE_less-wide is not set
 # CONFIG_PACKAGE_libfreefare-examples is not set
 # CONFIG_PACKAGE_libimobiledevice-utils is not set
+# CONFIG_PACKAGE_libjson-script is not set
 # CONFIG_PACKAGE_libnfc-bin is not set
 # CONFIG_PACKAGE_libnfc-examples is not set
 # CONFIG_PACKAGE_libplist-utils is not set
