--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# OpenWrt version: Attitude Adjustment (r37378)
-# Thu Jul 25 12:48:01 2013
+# OpenWrt version: Attitude Adjustment (r40757)
+# Sat May 17 19:30:15 2014
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -1342,6 +1342,8 @@ CONFIG_PACKAGE_qos-scripts=y
 # CONFIG_PACKAGE_resolveip is not set
 # CONFIG_PACKAGE_sflowovsd is not set
 CONFIG_PACKAGE_swconfig=y
+CONFIG_PACKAGE_ubus=y
+CONFIG_PACKAGE_ubusd=y
 CONFIG_PACKAGE_uci=y
 # CONFIG_PACKAGE_udev is not set
 CONFIG_PACKAGE_wireless-tools=y
@@ -1428,6 +1430,15 @@ CONFIG_PACKAGE_radvdump=y
 # CONFIG_PACKAGE_totd is not set
 # CONFIG_PACKAGE_tspc is not set
 # CONFIG_PACKAGE_tunslip6 is not set
+
+#
+# LuCI
+#
+
+#
+# 3. Applications
+#
+# CONFIG_PACKAGE_luci-app-bmx6 is not set
 
 #
 # Kernel modules
@@ -1830,6 +1841,7 @@ CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-ath=y
 # CONFIG_ATH_USER_REGD is not set
 # CONFIG_PACKAGE_ATH_DEBUG is not set
+# CONFIG_PACKAGE_kmod-ath10k is not set
 # CONFIG_PACKAGE_kmod-ath5k is not set
 CONFIG_PACKAGE_kmod-ath9k=y
 CONFIG_PACKAGE_kmod-ath9k-common=y
@@ -1872,17 +1884,18 @@ CONFIG_PACKAGE_MAC80211_MESH=y
 # CONFIG_PACKAGE_kmod-rt2400-pci is not set
 # CONFIG_PACKAGE_kmod-rt2500-pci is not set
 # CONFIG_PACKAGE_kmod-rt2500-usb is not set
-# CONFIG_PACKAGE_kmod-rt2800-lib is not set
 # CONFIG_PACKAGE_kmod-rt2800-pci is not set
 # CONFIG_PACKAGE_kmod-rt2800-usb is not set
 # CONFIG_PACKAGE_kmod-rt2x00-lib is not set
-# CONFIG_PACKAGE_kmod-rt2x00-mmio is not set
-# CONFIG_PACKAGE_kmod-rt2x00-pci is not set
-# CONFIG_PACKAGE_kmod-rt2x00-usb is not set
 # CONFIG_PACKAGE_kmod-rt61-pci is not set
 # CONFIG_PACKAGE_kmod-rt73-usb is not set
 # CONFIG_PACKAGE_kmod-rtl8180 is not set
 # CONFIG_PACKAGE_kmod-rtl8187 is not set
+# CONFIG_PACKAGE_kmod-rtl8192ce is not set
+# CONFIG_PACKAGE_kmod-rtl8192cu is not set
+# CONFIG_PACKAGE_kmod-rtl8192de is not set
+# CONFIG_PACKAGE_kmod-rtl8192se is not set
+# CONFIG_PACKAGE_kmod-rtlwifi is not set
 # CONFIG_PACKAGE_kmod-zd1211rw is not set
 
 #
@@ -2173,6 +2186,7 @@ CONFIG_PACKAGE_iptables-mod-ulog=y
 # CONFIG_PACKAGE_mdnsd is not set
 # CONFIG_PACKAGE_mdnsresponder is not set
 # CONFIG_PACKAGE_ndyndns is not set
+# CONFIG_PACKAGE_ohybridproxy is not set
 # CONFIG_PACKAGE_rarpd is not set
 # CONFIG_PACKAGE_unbound is not set
 # CONFIG_PACKAGE_unbound-anchor is not set
@@ -2244,11 +2258,11 @@ CONFIG_PACKAGE_iptables-mod-ulog=y
 # Routing and Redirection
 #
 CONFIG_PACKAGE_babeld=y
+# CONFIG_PACKAGE_babels is not set
 # CONFIG_PACKAGE_batmand is not set
 # CONFIG_PACKAGE_bird4 is not set
 # CONFIG_PACKAGE_birdc4 is not set
 # CONFIG_PACKAGE_bmx6 is not set
-# CONFIG_PACKAGE_bmxd is not set
 # CONFIG_PACKAGE_igmpproxy is not set
 CONFIG_PACKAGE_ip=y
 # CONFIG_PACKAGE_lldpd is not set
@@ -2274,6 +2288,7 @@ CONFIG_PACKAGE_olsrd-mod-txtinfo=y
 CONFIG_PACKAGE_olsrd-mod-watchdog=y
 # CONFIG_PACKAGE_olsrd-ninux is not set
 # CONFIG_PACKAGE_parprouted is not set
+CONFIG_PACKAGE_pim6sd=y
 # CONFIG_PACKAGE_quagga is not set
 # CONFIG_PACKAGE_redir is not set
 # CONFIG_PACKAGE_relayd is not set
@@ -2305,7 +2320,6 @@ CONFIG_PACKAGE_vrrpd=y
 # Telephony
 #
 # CONFIG_PACKAGE_asterisk18 is not set
-# CONFIG_PACKAGE_asterisk18-chan-sccp-b is not set
 # CONFIG_PACKAGE_baresip is not set
 # CONFIG_PACKAGE_freeswitch is not set
 # CONFIG_PACKAGE_kamailio is not set
@@ -2388,6 +2402,7 @@ CONFIG_PACKAGE_vrrpd=y
 # CONFIG_PACKAGE_strongswan-mod-eap-identity is not set
 # CONFIG_PACKAGE_strongswan-mod-eap-md5 is not set
 # CONFIG_PACKAGE_strongswan-mod-eap-mschapv2 is not set
+# CONFIG_PACKAGE_strongswan-mod-eap-radius is not set
 # CONFIG_PACKAGE_strongswan-mod-farp is not set
 # CONFIG_PACKAGE_strongswan-mod-fips-prf is not set
 # CONFIG_PACKAGE_strongswan-mod-gcm is not set
@@ -2396,6 +2411,7 @@ CONFIG_PACKAGE_vrrpd=y
 # CONFIG_PACKAGE_strongswan-mod-ha is not set
 # CONFIG_PACKAGE_strongswan-mod-hmac is not set
 # CONFIG_PACKAGE_strongswan-mod-kernel-klips is not set
+# CONFIG_PACKAGE_strongswan-mod-kernel-libipsec is not set
 # CONFIG_PACKAGE_strongswan-mod-kernel-netlink is not set
 # CONFIG_PACKAGE_strongswan-mod-kernel-pfkey is not set
 # CONFIG_PACKAGE_strongswan-mod-ldap is not set
@@ -2420,12 +2436,12 @@ CONFIG_PACKAGE_vrrpd=y
 # CONFIG_PACKAGE_strongswan-mod-smp is not set
 # CONFIG_PACKAGE_strongswan-mod-socket-default is not set
 # CONFIG_PACKAGE_strongswan-mod-socket-dynamic is not set
-# CONFIG_PACKAGE_strongswan-mod-socket-raw is not set
 # CONFIG_PACKAGE_strongswan-mod-sql is not set
 # CONFIG_PACKAGE_strongswan-mod-sqlite is not set
 # CONFIG_PACKAGE_strongswan-mod-stroke is not set
 # CONFIG_PACKAGE_strongswan-mod-test-vectors is not set
 # CONFIG_PACKAGE_strongswan-mod-uci is not set
+# CONFIG_PACKAGE_strongswan-mod-unity is not set
 # CONFIG_PACKAGE_strongswan-mod-updown is not set
 # CONFIG_PACKAGE_strongswan-mod-whitelist is not set
 # CONFIG_PACKAGE_strongswan-mod-x509 is not set
@@ -2524,6 +2540,7 @@ CONFIG_PACKAGE_uhttpd=y
 # CONFIG_PACKAGE_snort-wireless-pgsql is not set
 # CONFIG_PACKAGE_wavemon is not set
 # CONFIG_PACKAGE_xsupplicant is not set
+# CONFIG_PACKAGE_alfred is not set
 # CONFIG_PACKAGE_aoetools is not set
 # CONFIG_PACKAGE_apf is not set
 # CONFIG_PACKAGE_aprx is not set
@@ -2560,6 +2577,8 @@ CONFIG_PACKAGE_fprobe-ulog=y
 # CONFIG_PACKAGE_genl is not set
 # CONFIG_PACKAGE_gpsd is not set
 # CONFIG_PACKAGE_gpsd-clients is not set
+# CONFIG_PACKAGE_hnet-full is not set
+# CONFIG_PACKAGE_hnetd is not set
 # CONFIG_PACKAGE_hostapd is not set
 # CONFIG_PACKAGE_hostapd-mini is not set
 # CONFIG_PACKAGE_hostapd-utils is not set
@@ -2726,6 +2745,7 @@ CONFIG_WPA_MSG_MIN_PRIORITY=3
 # CONFIG_DRIVER_WEXT_SUPPORT is not set
 CONFIG_DRIVER_11N_SUPPORT=y
 # CONFIG_PACKAGE_wpa-supplicant-mini is not set
+# CONFIG_PACKAGE_wpa-supplicant-p2p is not set
 # CONFIG_PACKAGE_wpad is not set
 CONFIG_PACKAGE_wpad-mini=y
 # CONFIG_PACKAGE_wprobe-export is not set
@@ -2823,7 +2843,6 @@ CONFIG_PACKAGE_libopenssl=y
 # CONFIG_PACKAGE_fcgi is not set
 # CONFIG_PACKAGE_fftw3 is not set
 # CONFIG_PACKAGE_fftw3f is not set
-# CONFIG_PACKAGE_firewall-mod-save is not set
 # CONFIG_PACKAGE_fribidi is not set
 # CONFIG_PACKAGE_ftplib is not set
 # CONFIG_PACKAGE_giflib is not set
@@ -3029,6 +3048,8 @@ CONFIG_PACKAGE_libpcap=y
 # CONFIG_PACKAGE_libtorrent is not set
 # CONFIG_PACKAGE_libtwin is not set
 CONFIG_PACKAGE_libubox=y
+CONFIG_PACKAGE_libubus=y
+# CONFIG_PACKAGE_libubus-lua is not set
 CONFIG_PACKAGE_libuci=y
 # CONFIG_PACKAGE_libuci-lua is not set
 # CONFIG_PACKAGE_libucl is not set
@@ -3080,22 +3101,6 @@ CONFIG_PACKAGE_uclibcxx=y
 # CONFIG_PACKAGE_zaptel-libtonezone is not set
 # CONFIG_PACKAGE_zaptel14-libtonezone is not set
 CONFIG_PACKAGE_zlib=y
-
-#
-# LuCI2
-#
-
-#
-# Libraries
-#
-CONFIG_PACKAGE_libubus=y
-# CONFIG_PACKAGE_libubus-lua is not set
-
-#
-# System
-#
-CONFIG_PACKAGE_ubus=y
-CONFIG_PACKAGE_ubusd=y
 
 #
 # Multimedia
