--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r40757)
-# Sat May 17 19:30:15 2014
+# Mon May 19 17:05:39 2014
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -1404,8 +1404,6 @@ CONFIG_PACKAGE_ip6tables=y
 # CONFIG_PACKAGE_6tunnel is not set
 # CONFIG_PACKAGE_ahcpd is not set
 # CONFIG_PACKAGE_aiccu is not set
-# CONFIG_PACKAGE_bird6 is not set
-# CONFIG_PACKAGE_birdc6 is not set
 # CONFIG_PACKAGE_dhcp6-client is not set
 # CONFIG_PACKAGE_dhcp6-server is not set
 # CONFIG_PACKAGE_dibbler-client is not set
@@ -2261,7 +2259,9 @@ CONFIG_PACKAGE_babeld=y
 # CONFIG_PACKAGE_babels is not set
 # CONFIG_PACKAGE_batmand is not set
 # CONFIG_PACKAGE_bird4 is not set
+# CONFIG_PACKAGE_bird6 is not set
 # CONFIG_PACKAGE_birdc4 is not set
+# CONFIG_PACKAGE_birdc6 is not set
 # CONFIG_PACKAGE_bmx6 is not set
 # CONFIG_PACKAGE_igmpproxy is not set
 CONFIG_PACKAGE_ip=y
@@ -3715,7 +3715,7 @@ CONFIG_PACKAGE_uboot-envtools=y
 #
 # Extra packages
 #
-CONFIG_PACKAGE_reghack=y
+# CONFIG_PACKAGE_reghack is not set
 
 #
 # Emulators
